--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -969,8 +969,8 @@ nav:
         - NebulaGraph 社区版: 20.appendix/release-notes/nebula-comm-release-note.md
         - NebulaGraph Studio: 20.appendix/release-notes/studio-release-note.md
         - NebulaGraph Dashboard 社区版: 20.appendix/release-notes/dashboard-comm-release-note.md
-      - 学习路径: 20.appendix/learning-path.md
-#      - 生态工具概览: 20.appendix/6.eco-tool-version.md
+#      - 学习路径: 20.appendix/learning-path.md
+      - 生态工具概览: 20.appendix/6.eco-tool-version.md
       - 产品端口全集: 20.appendix/port-guide.md
       - 社区参与: 15.contribution/how-to-contribute.md
       - 年表: 20.appendix/history.md
