--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,13 +153,13 @@ extra:
      lang: en 
 # zh.end
 
-  analytics:
-    provider: google
+#  analytics:
+#    provider: google
 # en.begin  
-    property: 377962831
+#    property: 377962831
 # en.end
 # zh.begin
-    property: 385096931
+#    property: 385096931
 # zh.end    
   # branch represents code names (git clone). release represents version number used in texts.
   version:
