--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -554,8 +554,8 @@ nav:
           - Import data from JDBC: import-export/nebula-exchange/use-exchange/ex-ug-import-from-jdbc.md
           - Import data from SST files: import-export/nebula-exchange/use-exchange/ex-ug-import-from-sst.md
         - Exchange FAQ: import-export/nebula-exchange/ex-ug-FAQ.md
-      - Spark Connector: nebula-spark-connector.md
-      - Flink Connector: nebula-flink-connector.md
+      - Spark Connector: import-export/nebula-spark-connector.md
+      - Flink Connector: import-export/nebula-flink-connector.md
 
   - Best practices:
     - Compaction: 8.service-tuning/compaction.md
