--- a/.github/workflows/deploy-zh.yml
+++ b/.github/workflows/deploy-zh.yml
@@ -43,7 +43,7 @@ jobs:
           git fetch origin gh-pages-zh --depth=1 # fix mike's CI update
           mike list
           mike deploy ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
-          mike set-default ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
+          # mike set-default ${{ env.ACTIONTEST }} -b gh-pages-zh -p --rebase
           mike list
     
       - name: show Chinese git branches
