--- a/.github/workflows/deploy-en.yml
+++ b/.github/workflows/deploy-en.yml
@@ -35,8 +35,9 @@ jobs:
           git fetch origin gh-pages --depth=1 # fix mike's CI update
           mike list
           mike deploy ${{ env.ACTIONTEST }}  -p --rebase
-          mike set-default ${{ env.ACTIONTEST }} -p --rebase
-          mike list
+      #   The set-default command is only applicable to the latest version and must be commented in older versions.
+      #    mike set-default ${{ env.ACTIONTEST }} -p --rebase
+      #    mike list
 
       # - name: Deploy
       #   uses: peaceiris/actions-gh-pages@v3
