--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,8 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+  # collapse content
+  - pymdownx.details
 
 # Plugins
 plugins:
@@ -244,9 +246,9 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.5.0
-    tag: v1.5.0
-    branch: release-1.5
+    release: 1.7.0
+    tag: v1.7.0
+    branch: release-1.7
     upgrade_from: 3.5.0
     upgrade_to: 3.6.0
   exporter:
@@ -576,18 +578,15 @@ nav:
       - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
       - Deploy clusters:  
-#ent        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
       - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
       - Configure clusters:
         - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
-#ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
 
@@ -929,8 +928,8 @@ nav:
         - 自定义 NebulaGraph 集群的配置参数: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
         - 回收 PV: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
         - 管理集群日志: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md 
-        - 配置滚动更新策略: nebula-operator/11.rolling-update-strategy.md
       - 升级 NebulaGraph: nebula-operator/9.upgrade-nebula-cluster.md
+      - 配置滚动更新策略: nebula-operator/11.rolling-update-strategy.md
       - 故障自愈: nebula-operator/5.operator-failover.md
       - 常见问题: nebula-operator/7.operator-faq.md
 
