new docs pv expansion & admission control
1. add new docs pv expansion & admission control
2. reorganize content catalogue

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -575,19 +575,19 @@ nav:
       - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
       - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-      - Deploy clusters:  
-#ent        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
+      - Deploy clusters:     
         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
       - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
       - Configure clusters:
         - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
-#ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - Storage:
+          - Dynamically expand persistent volumes: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md 
+          - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md        
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
+        - Enable admission control: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
 
@@ -927,10 +927,13 @@ nav:
       - 连接 NebulaGraph: nebula-operator/4.connect-to-nebula-graph-service.md
       - 配置 NebulaGraph:
         - 自定义 NebulaGraph 集群的配置参数: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - 回收 PV: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
+        - 存储: 
+          - 动态在线扩容存储卷: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md
+          - 回收 PV: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
         - 管理集群日志: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md 
-        - 配置滚动更新策略: nebula-operator/11.rolling-update-strategy.md
+        - 开启准入控制: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
       - 升级 NebulaGraph: nebula-operator/9.upgrade-nebula-cluster.md
+      - 配置滚动更新策略: nebula-operator/11.rolling-update-strategy.md
       - 故障自愈: nebula-operator/5.operator-failover.md
       - 常见问题: nebula-operator/7.operator-faq.md
 
