keep operator comm content consistency between en & ch (#2318)
* keep operator comm content consistency between en & ch

* broken link fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,8 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+  # collapse content
+  - pymdownx.details
 
 # Plugins
 plugins:
