--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.4.3/docs-2.0/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.4.4/docs-2.0/'
 
 theme:
     name: material
@@ -103,7 +103,7 @@ plugins:
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
-      cover_subtitle: v3.4.3
+      cover_subtitle: v3.4.4
       author: Chris Chen, Cooper Liang, Abby Huang
       cover: true
       back_cover: true
@@ -131,7 +131,7 @@ extra:
   # For conditional rendering
   # Valid options: enterprise, community, both
   # enterprise means this version is for the Enterprise only. And so on in a similar fashion
-  database_edition: both
+  database_edition: enterprise
 
   # Language selector.
   #alternate:
@@ -149,13 +149,13 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
-    release: 3.4.3
+    release: 3.4.4
     nightly: nightly
     master: master
     base20: 2.0
     base200: 2.0.0
     branch: release-3.4
-    tag: v3.4.3
+    tag: v3.4.4
   studio:
     base111b: 1.1.1-beta
     base220: 2.2.1
