pv expansion & admission control
change font and add edit pencil

Update mkdocs.yml

add hpa & port config

Update mkdocs.yml

Update 3.1create-cluster-with-kubectl.md

Update requirements.txt

Update requirements.txt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,14 +9,18 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-# edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
 
 theme:
     name: material
+    font:
+      text: Noto Serif
+      code: Source Code Pro
     custom_dir: overrides
 # git repo icon
     icon:
       repo: fontawesome/brands/github
+      edit: material/pencil
     logo: 'https://docs-cdn.nebula-graph.com.cn/figures/vesoft-nebula-logo-white22-12-21.png'
     favicon: 'https://docs-cdn.nebula-graph.com.cn/figures/favicon.ico'
     palette:
@@ -32,6 +36,7 @@ theme:
       - navigation.top
       - header.autohide  
       - content.tabs.link
+      - content.action.edit
     language: 'en' 
 
 extra_css:
@@ -252,9 +257,9 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.6.2
-    tag: v1.6.2
-    branch: release-1.6
+    release: 1.7.1
+    tag: v1.7.1
+    branch: release-1.7
     upgrade_from: 3.5.0
     upgrade_to: 3.5.x
   exporter:
@@ -724,23 +729,21 @@ nav:
       - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
       - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
       - Deploy clusters: 
-#ent    
         - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
         - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
         - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
       - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
       - Configure clusters:
-        - Custom configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
-#ent
-        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - Customize configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
+        - Storage:
+          - Dynamically expand persistent volumes: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md 
+          - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/storage/8.3.balance-data-when-scaling-storage.md
+          - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-#ent
-#ent
         - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+        - Enable admission control: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent
       - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
