remove edit url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,12 @@ site_description: Documentation for NebulaGraph Database
 site_author: NebulaGraph
 site_url: https://docs.nebula-graph.io/
 docs_dir: docs-2.0
-repo_name: 'vesoft-inc/nebula'
-repo_url: 'https://github.com/vesoft-inc/nebula'
+# repo_name: 'vesoft-inc/nebula-docs'
+# repo_url: 'https://github.com/vesoft-inc/nebula-docs'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
+# edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
 
 theme:
     name: material
@@ -18,9 +18,9 @@ theme:
       code: Source Code Pro
     custom_dir: overrides
 # git repo icon
-    icon:
-      repo: fontawesome/brands/github
-      edit: material/pencil
+#     icon:
+#       repo: fontawesome/brands/github
+#       edit: material/pencil
     logo: 'https://docs-cdn.nebula-graph.com.cn/figures/vesoft-nebula-logo-white22-12-21.png'
     favicon: 'https://docs-cdn.nebula-graph.com.cn/figures/favicon.ico'
     palette:
