--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-mkdocs
+mkdocs==1.3.0
 weasyprint==54.3
 mkdocs-material-extensions
 mike
-mkdocs-material=9.4.7
+mkdocs-material
 mkdocs-material-extensions
 mkdocs-macros-plugin
 mdx_truly_sane_lists
