--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 mkdocs==1.3.0
 weasyprint==54.3
 mkdocs-material-extensions
-mike
+mike==1.1.2
 mkdocs-material
 mkdocs-material-extensions
 mkdocs-macros-plugin
