--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ theme:
       - navigation.top
       - header.autohide  
       - content.tabs.link
+      - content.code.copy
 # zh.begin
     language: 'zh'
 # zh.end
