enable code actions (#2333)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ theme:
 # git repo icon
     icon:
       repo: fontawesome/brands/github
+      # icon of the edit button
+      edit: material/pencil
     logo: 'https://docs-cdn.nebula-graph.com.cn/figures/vesoft-nebula-logo-white22-12-21.png'
     favicon: 'https://docs-cdn.nebula-graph.com.cn/figures/favicon.ico'
     palette:
@@ -43,6 +45,8 @@ theme:
       - navigation.top
       - header.autohide  
       - content.tabs.link
+      # enable code actions
+      - content.action.edit
       - content.code.copy
 # zh.begin
     language: 'zh'
