--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,10 +24,16 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 
 theme:
     name: material
-    custom_dir: overrides
+# zh.begin
+    custom_dir: docs-2.0-zh/overrides
+# zh.end   
+# en.begin
+    custom_dir: docs-2.0-en/overrides
+# en.end   
 # git repo icon
     icon:
       repo: fontawesome/brands/github
+      edit: material/pencil
     logo: 'https://docs-cdn.nebula-graph.com.cn/figures/vesoft-nebula-logo-white22-12-21.png'
     favicon: 'https://docs-cdn.nebula-graph.com.cn/figures/favicon.ico'
     palette:
@@ -43,6 +49,8 @@ theme:
       - navigation.top
       - header.autohide  
       - content.tabs.link
+      - content.code.copy
+      - content.action.edit
 # zh.begin
     language: 'zh'
 # zh.end
