--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,12 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 
 theme:
     name: material
-    custom_dir: overrides
+# zh.begin  
+  custom_dir: docs-2.0-zh/overrides
+# zh.end
+# en.begin  
+  custom_dir: docs-2.0-en/overrides
+# en.end
 # git repo icon
     icon:
       repo: fontawesome/brands/github
