--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,14 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 theme:
     name: material
     custom_dir: overrides
+    font:
+    code: Source Code Pro
+# zh.begin  
+    text: Noto Sans Simplified Chinese
+# zh.end 
+# en.begin
+    text: Noto Sans
+# en.end 
 # git repo icon
     icon:
       repo: fontawesome/brands/github
@@ -60,6 +68,9 @@ extra_css:
   - stylesheets/note.css
   - stylesheets/extra.css
   - css/version-select.css 
+# zh.begin  
+  - stylesheets/pdf.css
+# zh.end  
 
 # Extensions
 markdown_extensions:
@@ -127,8 +138,6 @@ plugins:
       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'            
       cover: true
       back_cover: true
-#      pdf_stylesheets: 
-#        - stylesheets/pdf.css
 # en.begin      
       output_path: pdf/NebulaGraph-EN.pdf
 # en.end
