--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,16 @@ theme:
 # en.begin  
     custom_dir: docs-2.0-en/overrides
 # en.end
+
+    font:
+      code: Source Code Pro
+# zh.begin  
+      text: Noto Sans Simplified Chinese
+# zh.end 
+# en.begin
+      text: Noto Sans
+# en.end 
+
 # git repo icon
     icon:
       repo: fontawesome/brands/github
