--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ extra_css:
   - stylesheets/logo.css
   - stylesheets/note.css
   - stylesheets/extra.css
-  - css/version-select.css 
+#  - css/version-select.css 
 
 # Extensions
 markdown_extensions:
@@ -156,7 +156,7 @@ extra_javascript:
   - js/jquery.js
   - js/search.js
   - js/config.js
-  - js/version-select.js  
+#  - js/version-select.js  
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - js/hotjar.js
