--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -593,24 +593,35 @@ nav:
       - Monitoring metrics: nebula-dashboard/6.monitor-parameter.md
 
   - NebulaGraph Operator:
-      - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
-      - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
-      - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-      - Deploy clusters:     
-        - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
-        - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
-      - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
-      - Configure clusters:
-        - Customize parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - Storage:
-          - Dynamically expand persistent volumes: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md 
-          - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md        
-        - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-        - Enable admission control: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
-      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
-      - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-      - Self-healing: nebula-operator/5.operator-failover.md
-      - FAQ: nebula-operator/7.operator-faq.md
+      - What is NebulaGraph Operator: k8s-operator/1.introduction-to-nebula-operator.md
+      - Getting started:
+        - Install NebulaGraph Operator: k8s-operator/2.get-started/2.1.install-operator.md
+        - Create a NebulaGraph cluster: k8s-operator/2.get-started/2.3.create-cluster.md
+        - Connect to a NebulaGraph cluster: k8s-operator/2.get-started/2.4.connect-to-cluster.md
+      - NebulaGraph Operator management: 
+        - Customize installation defaults: k8s-operator/3.operator-management/3.1.customize-installation.md
+        - Update NebulaGraph Operator: k8s-operator/3.operator-management/3.2.update-operator.md
+        - Upgrade NebulaGraph Operator: k8s-operator/3.operator-management/3.3.upgrade-operator.md
+        - Uninstall NebulaGraph Operator: k8s-operator/3.operator-management/3.4.unistall-operator.md
+      - Cluster administration:
+        - Deployment:
+          - Install clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+          - Upgrade clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
+          - Uninstall clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
+        - Customize cluster configurations: k8s-operator/4.cluster-administration/4.2.configuration.md
+        - Storage management:
+#          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
+          - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
+        - Logging: k8s-operator/4.cluster-administration/4.5.logging.md
+        - Security:
+          - Enable admission control: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+        - HA and balancing:
+          - Self-healing overview: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
+        - Advanced:
+          - Optimize leader transfer in rolling updates: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+#          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+      - FAQ: k8s-operator/5.FAQ.md
 
   - Graph computing:
     - NebulaGraph Algorithm: graph-computing/nebula-algorithm.md
@@ -939,24 +950,35 @@ nav:
       - 监控指标说明: nebula-dashboard/6.monitor-parameter.md
 
   - NebulaGraph Operator:
-      - 什么是 NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
-      - 使用流程: nebula-operator/6.get-started-with-operator.md
-      - 部署 NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-      - 部署 NebulaGraph: 
-        - 使用 Kubectl 部署 NebulaGraph 集群: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
-        - 使用 Helm 部署 NebulaGraph 集群: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
-      - 连接 NebulaGraph: nebula-operator/4.connect-to-nebula-graph-service.md
-      - 配置 NebulaGraph:
-        - 自定义 NebulaGraph 集群的配置参数: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - 存储: 
-          - 动态在线扩容存储卷: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md
-          - 回收 PV: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
-        - 管理集群日志: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md 
-        - 开启准入控制: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
-      - 升级 NebulaGraph: nebula-operator/9.upgrade-nebula-cluster.md
-      - 配置滚动更新策略: nebula-operator/11.rolling-update-strategy.md
-      - 故障自愈: nebula-operator/5.operator-failover.md
-      - 常见问题: nebula-operator/7.operator-faq.md
+      - 什么是 NebulaGraph Operator: k8s-operator/1.introduction-to-nebula-operator.md
+      - 快速入门:
+        - 安装 NebulaGraph Operator: k8s-operator/2.get-started/2.1.install-operator.md
+        - 快速创建集群: k8s-operator/2.get-started/2.3.create-cluster.md
+        - 连接集群: k8s-operator/2.get-started/2.4.connect-to-cluster.md
+      - 管理 NebulaGraph Operator: 
+        - 自定义安装配置: k8s-operator/3.operator-management/3.1.customize-installation.md
+        - 更新配置: k8s-operator/3.operator-management/3.2.update-operator.md
+        - 升级版本: k8s-operator/3.operator-management/3.3.upgrade-operator.md
+        - 卸载: k8s-operator/3.operator-management/3.4.unistall-operator.md
+      - 管理集群:
+        - 部署:
+          - 创建集群: k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+          - 升级集群版本: k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
+          - 删除集群: k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
+        - 更新配置: k8s-operator/4.cluster-administration/4.2.configuration.md
+        - 存储管理:
+#          - 使用本地持久化存储: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
+          - 动态在线扩容存储卷: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - 回收 PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
+        - 日志管理: k8s-operator/4.cluster-administration/4.5.logging.md
+        - 安全:
+          - 开启准入控制: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+        - 高可用和负载均衡:
+          - 故障自愈: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
+        - 高阶功能:
+          - 优化滚动更新中的 Leader 分布: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+#          - 重启集群: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+      - 常见问题: k8s-operator/5.FAQ.md
 
   - 图计算:
     - NebulaGraph Algorithm: graph-computing/nebula-algorithm.md  
