no-use-of-independent-operator-release-note-doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -988,7 +988,7 @@ nav:
   - 常见问题: 20.appendix/0.FAQ.md
 
   - 附录:
-      - Release Note:
+      - 更新说明:
         - NebulaGraph 社区版: 20.appendix/release-notes/nebula-comm-release-note.md
         - NebulaGraph Studio: 20.appendix/release-notes/studio-release-note.md
         - NebulaGraph Dashboard 社区版: 20.appendix/release-notes/dashboard-comm-release-note.md
