--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -383,6 +383,9 @@ nav:
             - SHOW SESSIONS: 3.ngql-guide/7.general-query-statements/6.show/17.show-sessions.md
             - SHOW QUERIES: 3.ngql-guide/7.general-query-statements/6.show/18.show-queries.md
             - SHOW META LEADER: 3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
+          - FIND PATH: 3.ngql-guide/7.general-query-statements/6.find-path.md
+          - GET SUBGRAPH: 3.ngql-guide/7.general-query-statements/7.get-subgraph.md
+
 
       - Clauses and options:
           - GROUP BY: 3.ngql-guide/8.clauses-and-options/group-by.md
@@ -450,9 +453,6 @@ nav:
         - Deploy Raft Listener cluster: 4.deployment-and-installation/6.deploy-text-based-index/3.deploy-listener.md
         - Search with full-text index: 3.ngql-guide/15.full-text-index-statements/1.search-with-text-based-index.md
 
-      - Subgraph and path:
-          - GET SUBGRAPH: 3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md
-          - FIND PATH: 3.ngql-guide/16.subgraph-and-path/2.find-path.md
 
       - Query tuning and terminating statements:
           - EXPLAIN and PROFILE: 3.ngql-guide/17.query-tuning-statements/1.explain-and-profile.md
@@ -741,6 +741,8 @@ nav:
             - SHOW SESSIONS: 3.ngql-guide/7.general-query-statements/6.show/17.show-sessions.md
             - SHOW QUERIES: 3.ngql-guide/7.general-query-statements/6.show/18.show-queries.md
             - SHOW META LEADER: 3.ngql-guide/7.general-query-statements/6.show/19.show-meta-leader.md
+          - FIND PATH: 3.ngql-guide/7.general-query-statements/6.find-path.md
+          - GET SUBGRAPH: 3.ngql-guide/7.general-query-statements/7.get-subgraph.md
 
       - 子句和选项:
           - GROUP BY: 3.ngql-guide/8.clauses-and-options/group-by.md
@@ -806,10 +808,6 @@ nav:
         - 部署全文索引: 4.deployment-and-installation/6.deploy-text-based-index/2.deploy-es.md
         - 部署 Raft listener: 4.deployment-and-installation/6.deploy-text-based-index/3.deploy-listener.md
         - 全文搜索: 3.ngql-guide/15.full-text-index-statements/1.search-with-text-based-index.md
-
-      - 子图和路径:
-          - GET SUBGRAPH: 3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md
-          - FIND PATH: 3.ngql-guide/16.subgraph-and-path/2.find-path.md
 
       - 查询调优与终止:
           - EXPLAIN和PROFILE: 3.ngql-guide/17.query-tuning-statements/1.explain-and-profile.md
