--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -359,6 +359,7 @@ nav:
 #          - User-defined functions: 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
 
       - General queries statements:
+          - Overview: 3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
           - MATCH: 3.ngql-guide/7.general-query-statements/2.match.md
           - OPTIONAL MATCH: 3.ngql-guide/7.general-query-statements/optional-match.md
           - LOOKUP: 3.ngql-guide/7.general-query-statements/5.lookup.md
