--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,9 @@ theme:
     features:
       - navigation.top
       - header.autohide  
-      - content.tabs.link
+      - content.tabs.
+      - content.action.edit
+      - content.code.copy
     language: 'en'
 
 extra_css:
