--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,7 @@ theme:
     features:
       - navigation.top
       - header.autohide  
-      - content.tabs.
+      - content.tabs.link
       - content.action.edit
       - content.code.copy
     language: 'en'
