--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,8 @@ theme:
       - navigation.top
       - header.autohide  
       - content.tabs.link
+      - content.action.edit
+      - content.code.copy
     language: 'en'
 
 extra_css:
