--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,73 +69,73 @@ markdown_extensions:
   - pymdownx.details
 
 # Plugins
-plugins:
-  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
-  - macros:
-      include_dir: docs-2.0/reuse/
-  - git-revision-date-localized
+# plugins:
+#   - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
+#   - macros:
+#       include_dir: docs-2.0/reuse/
+#   - git-revision-date-localized
 
-  - exclude:
-# Exclude files with unix-style wildcards (globs)
-      glob:
-# Exclude all files in a directory. The path starts with the directory name in docs-2.0, such as `20.appendix/*`.
-        - nebula-flink/*
-        - CHANGELOG.md
-        - spark-connector/*
-        - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
-        - nebula-cloud/*
-        - nebula-cloud.md
-        - nebula-importer/config-with-header.md
-        - nebula-importer/config-without-header.md
-        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
-        # When publishing a version of a document that includes Enterprise Edition, annotation the following page
-        # ent.begin
-        - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
-        - 9.about-license/*
-        - 5.configurations-and-logs/2.log-management/audit-log.md
-        - 7.data-security/1.authentication/4.ldap.md
-        - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
-        - nebula-operator/10.backup-restore-using-operator.md
-        - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
-        - synchronization-and-migration/replication-between-clusters.md
-        - 20.appendix/release-notes/nebula-ent-release-note.md
-        - nebula-dashboard-ent/*
-        - nebula-explorer/*
-        - graph-computing/nebula-analytics.md
-        - graph-computing/use-explorer.md
-        - backup-and-restore/nebula-br-ent/*
-        - 6.monitor-and-metrics/3.bbox/*
-        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
-        - 3.ngql-guide/8.clauses-and-options/joins.md
-        - 20.appendix/release-notes/dashboard-ent-release-note.md
-        - 20.appendix/release-notes/explorer-release-note.md
-        - 4.deployment-and-installation/5.zone.md
-        - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
-        # ent.end
+#   - exclude:
+# # Exclude files with unix-style wildcards (globs)
+#       glob:
+# # Exclude all files in a directory. The path starts with the directory name in docs-2.0, such as `20.appendix/*`.
+#         - nebula-flink/*
+#         - CHANGELOG.md
+#         - spark-connector/*
+#         - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
+#         - nebula-cloud/*
+#         - nebula-cloud.md
+#         - nebula-importer/config-with-header.md
+#         - nebula-importer/config-without-header.md
+#         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+#         # When publishing a version of a document that includes Enterprise Edition, annotation the following page
+#         # ent.begin
+#         - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
+#         - 9.about-license/*
+#         - 5.configurations-and-logs/2.log-management/audit-log.md
+#         - 7.data-security/1.authentication/4.ldap.md
+#         - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+#         - nebula-operator/10.backup-restore-using-operator.md
+#         - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
+#         - synchronization-and-migration/replication-between-clusters.md
+#         - 20.appendix/release-notes/nebula-ent-release-note.md
+#         - nebula-dashboard-ent/*
+#         - nebula-explorer/*
+#         - graph-computing/nebula-analytics.md
+#         - graph-computing/use-explorer.md
+#         - backup-and-restore/nebula-br-ent/*
+#         - 6.monitor-and-metrics/3.bbox/*
+#         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+#         - 3.ngql-guide/8.clauses-and-options/joins.md
+#         - 20.appendix/release-notes/dashboard-ent-release-note.md
+#         - 20.appendix/release-notes/explorer-release-note.md
+#         - 4.deployment-and-installation/5.zone.md
+#         - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+#         # ent.end
 
-        # comm.begin
-        # comm.end
-# Exclude the file with the following file name.
-#        - abc.md
-# Exclude files with regular expressions (regexes)
-#    regex:
-#      - '.*\.(tmp|bin|tar)$'
+#         # comm.begin
+#         # comm.end
+# # Exclude the file with the following file name.
+# #        - abc.md
+# # Exclude files with regular expressions (regexes)
+# #    regex:
+# #      - '.*\.(tmp|bin|tar)$'
 
-  - with-pdf:
-      copyright: 2023 Vesoft Inc.
-      cover_subtitle: v3.5.0-sc
-      author: Cooper Liang, Abby Huang
-      cover: true
-      back_cover: true
-      cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
-      output_path: pdf/NebulaGraph-EN.pdf
-      #show_anchors: true
-      #render_js: true
-      #headless_chrome_path: headless-chromium
-      #enabled_if_env: ENABLE_PDF_EXPORT
-      #debug_html: true
-      #show_anchors: true
-      #verbose: true
+#   - with-pdf:
+#       copyright: 2023 Vesoft Inc.
+#       cover_subtitle: v3.5.0-sc
+#       author: Cooper Liang, Abby Huang
+#       cover: true
+#       back_cover: true
+#       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
+#       output_path: pdf/NebulaGraph-EN.pdf
+#       #show_anchors: true
+#       #render_js: true
+#       #headless_chrome_path: headless-chromium
+#       #enabled_if_env: ENABLE_PDF_EXPORT
+#       #debug_html: true
+#       #show_anchors: true
+#       #verbose: true
 
 extra_javascript:
   - js/jquery.js
@@ -725,28 +725,43 @@ nav:
     - Exchange FAQ: nebula-exchange/ex-ug-FAQ.md
 
   - NebulaGraph Operator:
-      - What is NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
-      - Overview of using NebulaGraph Operator: nebula-operator/6.get-started-with-operator.md
-      - Deploy NebulaGraph Operator: nebula-operator/2.deploy-nebula-operator.md
-      - Deploy clusters: 
-        - Deploy LM: nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md     
-        - Deploy clusters with Kubectl: nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
-        - Deploy clusters with Helm: nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
-      - Connect to NebulaGraph databases: nebula-operator/4.connect-to-nebula-graph-service.md
-      - Configure clusters:
-        - Customize configuration parameters for a NebulaGraph cluster: nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md
-        - Storage:
-          - Dynamically expand persistent volumes: nebula-operator/8.custom-cluster-configurations/storage/8.6.dynamic-expand-pv.md 
-          - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/storage/8.3.balance-data-when-scaling-storage.md
-          - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/storage/8.2.pv-reclaim.md
-        - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
-        - Enable admission control: nebula-operator/8.custom-cluster-configurations/8.6.admission-control.md
-      - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
-      - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
-      - Self-healing: nebula-operator/5.operator-failover.md
-      - FAQ: nebula-operator/7.operator-faq.md
+      - What is NebulaGraph Operator: k8s-operator/1.introduction-to-nebula-operator.md
+      - Getting started:
+        - Install NebulaGraph Operator: k8s-operator/2.get-started/2.1.install-operator.md
+        - Deploy LM: k8s-operator/2.get-started/2.2.deploy-lm.md
+        - Create a NebulaGraph cluster: k8s-operator/2.get-started/2.3.create-cluster.md
+        - Connect to a NebulaGraph cluster: k8s-operator/2.get-started/2.4.connect-to-cluster.md
+      - NebulaGraph Operator management: 
+        - Customize installation defaults: k8s-operator/3.operator-management/3.1.customize-installation.md
+        - Update NebulaGraph Operator: k8s-operator/3.operator-management/3.2.update-operator.md
+        - Upgrade NebulaGraph Operator: k8s-operator/3.operator-management/3.3.upgrade-operator.md
+        - Uninstall NebulaGraph Operator: k8s-operator/3.operator-management/3.4.unistall-operator.md
+      - Cluster administration:
+        - Deployment:
+          - Install clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+          - Upgrade clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
+          - Uninstall clusters: k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
+        - Customize cluster configurations: k8s-operator/4.cluster-administration/4.2.configuration.md
+        - Scaling: 
+          - Scaling clusters: k8s-operator/4.cluster-administration/4.3.scaling/4.3.1.resizing.md
+          - Enable HPA: k8s-operator/4.cluster-administration/4.3.scaling/4.3.2.enable-hpa.md
+        - Storage management:
+#          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
+          - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
+          - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
+        - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
+        - Backup and restore: k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
+        - Security:
+          - Enable mTLS: k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
+          - Enable admission control: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+        - HA and balancing:
+          - Self-healing overview: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md
+          - Enable disaster recovery zones: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
+          - Balance data after scale-out: k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md
+        - Advanced:
+          - Optimize leader transfer in rolling updates: k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+#          - Restart clusters: k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+      - FAQ: k8s-operator/5.FAQ.md
 
   - Graph computing:
 
