--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,74 +68,74 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.details
 
-# Plugins
-# plugins:
-#   - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
-#   - macros:
-#       include_dir: docs-2.0/reuse/
-#   - git-revision-date-localized
+Plugins
+plugins:
+  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
+  - macros:
+      include_dir: docs-2.0/reuse/
+  - git-revision-date-localized
 
-#   - exclude:
-# # Exclude files with unix-style wildcards (globs)
-#       glob:
-# # Exclude all files in a directory. The path starts with the directory name in docs-2.0, such as `20.appendix/*`.
-#         - nebula-flink/*
-#         - CHANGELOG.md
-#         - spark-connector/*
-#         - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
-#         - nebula-cloud/*
-#         - nebula-cloud.md
-#         - nebula-importer/config-with-header.md
-#         - nebula-importer/config-without-header.md
-#         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
-#         # When publishing a version of a document that includes Enterprise Edition, annotation the following page
-#         # ent.begin
-#         - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
-#         - 9.about-license/*
-#         - 5.configurations-and-logs/2.log-management/audit-log.md
-#         - 7.data-security/1.authentication/4.ldap.md
-#         - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
-#         - nebula-operator/10.backup-restore-using-operator.md
-#         - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
-#         - synchronization-and-migration/replication-between-clusters.md
-#         - 20.appendix/release-notes/nebula-ent-release-note.md
-#         - nebula-dashboard-ent/*
-#         - nebula-explorer/*
-#         - graph-computing/nebula-analytics.md
-#         - graph-computing/use-explorer.md
-#         - backup-and-restore/nebula-br-ent/*
-#         - 6.monitor-and-metrics/3.bbox/*
-#         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
-#         - 3.ngql-guide/8.clauses-and-options/joins.md
-#         - 20.appendix/release-notes/dashboard-ent-release-note.md
-#         - 20.appendix/release-notes/explorer-release-note.md
-#         - 4.deployment-and-installation/5.zone.md
-#         - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
-#         # ent.end
+  - exclude:
+# Exclude files with unix-style wildcards (globs)
+      glob:
+# Exclude all files in a directory. The path starts with the directory name in docs-2.0, such as `20.appendix/*`.
+        - nebula-flink/*
+        - CHANGELOG.md
+        - spark-connector/*
+        - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
+        - nebula-cloud/*
+        - nebula-cloud.md
+        - nebula-importer/config-with-header.md
+        - nebula-importer/config-without-header.md
+        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        # When publishing a version of a document that includes Enterprise Edition, annotation the following page
+        # ent.begin
+        - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
+        - 9.about-license/*
+        - 5.configurations-and-logs/2.log-management/audit-log.md
+        - 7.data-security/1.authentication/4.ldap.md
+        - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - nebula-operator/10.backup-restore-using-operator.md
+        - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
+        - synchronization-and-migration/replication-between-clusters.md
+        - 20.appendix/release-notes/nebula-ent-release-note.md
+        - nebula-dashboard-ent/*
+        - nebula-explorer/*
+        - graph-computing/nebula-analytics.md
+        - graph-computing/use-explorer.md
+        - backup-and-restore/nebula-br-ent/*
+        - 6.monitor-and-metrics/3.bbox/*
+        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - 3.ngql-guide/8.clauses-and-options/joins.md
+        - 20.appendix/release-notes/dashboard-ent-release-note.md
+        - 20.appendix/release-notes/explorer-release-note.md
+        - 4.deployment-and-installation/5.zone.md
+        - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+        # ent.end
 
-#         # comm.begin
-#         # comm.end
-# # Exclude the file with the following file name.
-# #        - abc.md
-# # Exclude files with regular expressions (regexes)
-# #    regex:
-# #      - '.*\.(tmp|bin|tar)$'
+        # comm.begin
+        # comm.end
+# Exclude the file with the following file name.
+#        - abc.md
+# Exclude files with regular expressions (regexes)
+#    regex:
+#      - '.*\.(tmp|bin|tar)$'
 
-#   - with-pdf:
-#       copyright: 2023 Vesoft Inc.
-#       cover_subtitle: v3.5.0-sc
-#       author: Cooper Liang, Abby Huang
-#       cover: true
-#       back_cover: true
-#       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
-#       output_path: pdf/NebulaGraph-EN.pdf
-#       #show_anchors: true
-#       #render_js: true
-#       #headless_chrome_path: headless-chromium
-#       #enabled_if_env: ENABLE_PDF_EXPORT
-#       #debug_html: true
-#       #show_anchors: true
-#       #verbose: true
+  - with-pdf:
+      copyright: 2023 Vesoft Inc.
+      cover_subtitle: v3.5.0-sc
+      author: Cooper Liang, Abby Huang
+      cover: true
+      back_cover: true
+      cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
+      output_path: pdf/NebulaGraph-EN.pdf
+      #show_anchors: true
+      #render_js: true
+      #headless_chrome_path: headless-chromium
+      #enabled_if_env: ENABLE_PDF_EXPORT
+      #debug_html: true
+      #show_anchors: true
+      #verbose: true
 
 extra_javascript:
   - js/jquery.js
