support-restart-of-service-pods
Co-Authored-By: Chris Chen <chris.chen@vesoft.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -614,7 +614,7 @@ nav:
 #          - Use local PV: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.1.use-local-pv.md
           - Dynamically expand persistent volumes: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.2.pv-expansion.md
           - Configure PV reclaim: k8s-operator/4.cluster-administration/4.4.storage-management/4.4.3.configure-pv-reclaim.md
-        - Logging: k8s-operator/4.cluster-administration/4.5.logging.md
+        - Log management: k8s-operator/4.cluster-administration/4.5.logging.md
         - Security:
           - Enable admission control: k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
         - HA and balancing:
