--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-mkdocs==1.3.0
+mkdocs
 weasyprint==54.3
 mkdocs-material-extensions
-mike
-mkdocs-material
+mike==1.1.2
+mkdocs-material==9.4.6
 mkdocs-material-extensions
 mkdocs-macros-plugin
 mdx_truly_sane_lists
