--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.details
 
-Plugins
+# Plugins
 plugins:
   - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
   - macros:
