--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -540,8 +540,10 @@ nav:
           - Import data from JDBC: import-export/nebula-exchange/use-exchange/ex-ug-import-from-jdbc.md
           - Import data from SST files: import-export/nebula-exchange/use-exchange/ex-ug-import-from-sst.md
         - Exchange FAQ: import-export/nebula-exchange/ex-ug-FAQ.md
-      - Spark Connector: import-export/nebula-spark-connector.md
-      - Flink Connector: import-export/nebula-flink-connector.md
+
+  - Connectors:        
+      - NebulaGraph Spark Connector: connector/nebula-spark-connector.md
+      - NebulaGraph Flink Connector: connector/nebula-flink-connector.md
 
   - Best practices:
     - Compaction: 8.service-tuning/compaction.md
@@ -895,9 +897,11 @@ nav:
           - 导入 SST 文件数据: import-export/nebula-exchange/use-exchange/ex-ug-import-from-sst.md
         - Exchange 常见问题: import-export/nebula-exchange/ex-ug-FAQ.md
 
-      - NebulaGraph Spark Connector: import-export/nebula-spark-connector.md
-          
-      - NebulaGraph Flink Connector: import-export/nebula-flink-connector.md
+  - 连接器:
+
+      - NebulaGraph Spark Connector: connector/nebula-spark-connector.md
+
+      - NebulaGraph Flink Connector: connector/nebula-flink-connector.md
 
   - 最佳实践:
       - Compaction: 8.service-tuning/compaction.md
