add survey banner

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,7 @@ theme:
     # enable code actions
     - content.action.edit
     - content.code.copy
+    - announce.dismiss
 # zh.begin
   language: 'zh'
 # zh.end
