--- a/.github/workflows/deploy-en.yml
+++ b/.github/workflows/deploy-en.yml
@@ -40,5 +40,5 @@ jobs:
           mike list
           mike deploy ${{ env.ACTIONTEST }}  -p --rebase
         #  mike set-default ${{ env.ACTIONTEST }} -p --rebase
-          mike list
+        #  mike list
 
