--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -752,7 +752,7 @@ nav:
           - YIELD: 3.ngql-guide/8.clauses-and-options/yield.md
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
-#          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md
+          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md
 
       - 变量和复合查询:
         - 复合查询: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
