--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ plugins:
         - nebula-cloud/nebula-cloud-on-alibabacloud/3.delete-service-instance.md
         - nebula-cloud/nebula-cloud-on-alibabacloud/4.scaling-services.md
         - 20.appendix/learning-path.md
+        - 3.ngql-guide/8.clauses-and-options/joins.md
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
@@ -394,7 +395,7 @@ nav:
           - YIELD: 3.ngql-guide/8.clauses-and-options/yield.md
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
-          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md      
+      #    - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md      
 
       - Variables and composite queries:
         - Composite queries: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
