--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -583,6 +583,7 @@ nav:
         - Manage indexes: nebula-studio/manage-schema/st-ug-crud-index.md
         - View schema: nebula-studio/manage-schema/st-ug-view-schema.md
       - Schema drafting: nebula-studio/quick-start/draft.md  
+    - Global settings: nebula-studio/system-settings.md
     - Troubleshooting:
       - Database connection error: nebula-studio/troubleshooting/st-ug-config-server-errors.md
       - Unable to access Studio: nebula-studio/troubleshooting/st-ug-connection-errors.md
@@ -940,6 +941,7 @@ nav:
         - 操作索引: nebula-studio/manage-schema/st-ug-crud-index.md
         - 查看 Schema: nebula-studio/manage-schema/st-ug-view-schema.md
       - Schema 草图: nebula-studio/quick-start/draft.md
+    - 全局设置: nebula-studio/system-settings.md
     - 故障排查:
       - 连接数据库错误: nebula-studio/troubleshooting/st-ug-config-server-errors.md
       - 无法访问 Studio: nebula-studio/troubleshooting/st-ug-connection-errors.md
