wip updates-on-operator-chart-configurations- (#2439)
* updates-on-operator-chart-configurations-

* comment fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -164,6 +164,7 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
+    name: NebulaGraph
     release: 3.5.0
     nightly: nightly
     master: master
