Update BR to 3.7.0 (#289)
* Update BR to 3.7.0

* update

* Update 2.install-tools.md

* Update 2.install-tools.md

* update

* update

* Update 4.6.backup-and-restore.md

* Update 4.6.backup-and-restore.md

* Update 4.6.backup-and-restore.md

* Update 4.6.backup-and-restore.md

* Update 4.6.backup-and-restore.md

* Update 4.6.backup-and-restore.md

* Update 2.install-tools.md

* Add Chinese

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md

Co-authored-by: abby.huang <78209557+abby-cyber@users.noreply.github.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md

Co-authored-by: abby.huang <78209557+abby-cyber@users.noreply.github.com>

* Update 2.install-tools.md

* Update 4.restore-data.md

* add Chinese

* Update 4.6.backup-and-restore.md

* update

* update bucket name

* Update flags to hyphen-connected

* unhide toc

* Update 2.install-tools.md

* update agent

* revert agent configs

* update enable-ssl

* update flag

---------

Co-authored-by: abby.huang <78209557+abby-cyber@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -235,8 +235,14 @@ extra:
     release: 3.5.1
     tag: v3.5.1
   agent:
-    release: 3.4.0
-    tag: v3.4.0
+    release: 3.7.0
+    tag: v3.7.0
+# zh.begin
+    name: 悦数备份&恢复
+# zh.end
+# en.begin
+    name: NebulaGraph Backup&Restore
+# en.end
   cpp:
     release: 3.4.0
     branch: release-3.4
@@ -524,17 +530,20 @@ nav:
       - SSL: 7.data-security/4.ssl.md
 
   - Backup and restore:
+
       - NebulaGraph BR Community:
         - What is BR Community: backup-and-restore/nebula-br/1.what-is-br.md
         - Install BR: backup-and-restore/nebula-br/2.compile-br.md
         - Use BR to back up data: backup-and-restore/nebula-br/3.br-backup-data.md
         - Use BR to restore data: backup-and-restore/nebula-br/4.br-restore-data.md
-#ent
-      - NebulaGraph BR Enterprise:
-        - What is BR Enterprise: backup-and-restore/nebula-br-ent/1.br-ent-overview.md
-        - Install BR: backup-and-restore/nebula-br-ent/2.install-tools.md
-        - Back up data with BR: backup-and-restore/nebula-br-ent/3.backup-data.md
-        - Restore data with BR: backup-and-restore/nebula-br-ent/4.restore-data.md
+
+
+      - NebulaGraph Backup&Restore:
+          - What is Backup&Restore: backup-and-restore/br-ent/1.br-ent-overview.md
+          - Install Backup&Restore: backup-and-restore/br-ent/2.install-tools.md
+          - Back up data: backup-and-restore/br-ent/3.backup-data.md
+          - Restore data: backup-and-restore/br-ent/4.restore-data.md
+
       - Manage snapshots: backup-and-restore/3.manage-snapshot.md
 
   - Synchronize and migrate:
