Update google tag ID

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,10 +180,10 @@ extra:
   analytics:
     provider: google
 # en.begin  
-    property: G-377962831
+    property: G-T28CCMBWBM
 # en.end
 # zh.begin
-    property: G-385096931
+    property: G-V7TW451FVS
 # zh.end    
   # branch represents code names (git clone). release represents version number used in texts.
   version:
