--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,10 +180,10 @@ extra:
   analytics:
     provider: google
 # en.begin  
-    property: G-T28CCMBWBM
+    property: G-7YZEG0W61R
 # en.end
 # zh.begin
-    property: G-V7TW451FVS
+    property: G-BGGB2REDGM
 # zh.end    
   # branch represents code names (git clone). release represents version number used in texts.
   version:
