--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           # mike delete 3.5.0 -p
           git fetch origin gh-pages --depth=1 # fix mike's CI update
-          mike deploy 3.5.0 -p --rebase
+          mike deploy 3.5.0 -p 
           mike list
 
       # - name: Deploy
