--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,10 +179,10 @@ extra:
   analytics:
     provider: google
 # en.begin  
-    property: G-377962831
+    property: G-7YZEG0W61R
 # en.end
 # zh.begin
-    property: G-385096931
+    property: G-BGGB2REDGM
 # zh.end    
   # branch represents code names (git clone). release represents version number used in texts.
   version:
