--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           # mike delete v3.0.1 -p
           git fetch origin gh-pages --depth=1 # fix mike's CI update
           mkdocs build -v # this is a test
-          mike deploy 3.0.1 -p --rebase
+          mike deploy 3.0.1 -p 
           mike list
 
       # - name: Deploy
