--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Mike Deploy
         run: |
           git fetch origin gh-pages --depth=1 # fix mike's CI update
-          mike deploy 3.0.0 -p --rebase
+          mike deploy 3.0.0 -p 
           mike list
 
       # - name: Deploy
