Add cookie consent (#2471)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,10 @@ site_author: NebulaGraph
 site_name: NebulaGraph Database Manual
 site_url: https://docs.nebula-graph.io/
 docs_dir: docs-2.0-en
-copyright: Copyright &copy; 2023 NebulaGraph
+copyright: > 
+  Copyright &copy; 2018 - 2024 NebulaGraph
+  <a href="#__consent">Change cookie settings</a>
+
 # Modify this line in each version upgrade release
 edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-en/'
 # en.end
@@ -16,7 +19,9 @@ site_url: https://docs.nebula-graph.com.cn/
 docs_dir: docs-2.0-zh
 # Modify this line in each version upgrade release
 edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/master/docs-2.0-zh/'
-copyright: Copyright &copy; 2023 NebulaGraph - 浙ICP备20010487号
+copyright: >
+  Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号
+  <a href="#__consent">修改 Cookie 设置</a>
 # zh.end
 
 repo_name: 'vesoft-inc/nebula'
@@ -183,7 +188,26 @@ extra:
 # en.end
 # zh.begin
     property: G-BGGB2REDGM
-# zh.end    
+# zh.end 
+# Cookie consent is required by laws including the General Data Protection Regulation (GDPR) in the EU, and the California Consumer Privacy Act (CCPA) in California, USA.
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    cookies:
+      github:
+        name: GitHub
+        checked: true
+      analytics:
+        name: Google Analytics
+        checked: true  
+    actions:
+      - accept
+      - manage
+      - reject       
   # branch represents code names (git clone). release represents version number used in texts.
   version:
     provider: mike
