--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -217,7 +217,7 @@ extra:
         checked: true  
     actions:
       - accept
-      - manage   
+      - reject   
 # branch represents code names (git clone). release represents version number used in texts.  
 
   version:
