--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,10 +17,8 @@ edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-en/'
 site_name: NebulaGraph Database 手册 
 site_url: https://docs.nebula-graph.com.cn/  
 docs_dir: docs-2.0-zh
-
 copyright: >
-  Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号 - 
-  <a href="#__consent">修改 Cookie 设定</a>
+  Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号
 # Modify this line in each version upgrade release
 edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-zh/'    
 # zh.end
@@ -192,22 +190,16 @@ extra:
     property: G-BGGB2REDGM
 # zh.end    
 
-# zh.end
+# en.begin  
 # Cookie consent is required by laws including the General Data Protection Regulation (GDPR) in the EU, and the California Consumer Privacy Act (CCPA) in California, USA.
   consent:
-# en.begin  
     title: Cookie consent
     description: >- 
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
       make our documentation better.
-# en.end
-# zh.begin  
-    title: Cookie 设定
-    description: >- 
-      我们使用 Cookie 识别您的重复访问和偏好，评估您是否找到所需的内容，进而衡量文档的有效性。若您同意我们收集 Cookie，您将会帮助我们改进文档。  
-# zh.end       
+      
     cookies:
       github:
         name: GitHub
@@ -217,7 +209,8 @@ extra:
         checked: true  
     actions:
       - accept
-      - reject   
+      - reject  
+# en.end       
 # branch represents code names (git clone). release represents version number used in texts.  
 
   version:
