--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,8 +17,7 @@ edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-en/'
 site_name: NebulaGraph Database 手册 
 site_url: https://docs.nebula-graph.com.cn/  
 docs_dir: docs-2.0-zh
-copyright: >
-  Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号
+copyright: Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号
 # Modify this line in each version upgrade release
 edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-zh/'    
 # zh.end
