--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -228,7 +228,7 @@ extra:
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-sad-outline
-          name: 此页面提供了一些信息，但未完全回答我的问题。
+          name: 此页面提供了一些信息，但未完全解决我的问题。
           data: 2
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
@@ -238,12 +238,12 @@ extra:
           note: >- 
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-happy-outline
-          name: 此页面对我有帮助，回答了我的大部分问题。
+          name: 此页面对我有帮助，解决了我的大部分问题。
           data: 4
           note: >-
             感谢您的反馈！欢迎提交 <a href="https://github.com/vesoft-inc/nebula-docs/issues/new/?title=[Feedback]+{title}+-+{url}" target="_blank" rel="noopener">GitHub issue</a> 指出具体问题，帮助我们改进此页面。
         - icon: material/emoticon-excited-outline
-          name: 此页面非常有帮助，回答了我的所有问题。
+          name: 此页面非常有帮助，解决了我的所有问题。
           data: 5
           note: >-
             感谢您的反馈！
